--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "curso_angularjs",
   "version": "1.0.0",
   "description": "Curso AngularJS",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alce65/angularjs_2017.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.5",
+    "angular-local-storage": "^0.6.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-ui-dist": "^1.12.1"
   }
 }
